--- a/index.html
+++ b/index.html
@@ -11,24 +11,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ba3e6970e1.js" crossorigin="anonymous"></script>
-    <title>HUDDLE</title>
+    <title>Huddle</title>
 </head>
 <body>
-    <footer>
-        <nav>
-            <img src="./assets/logo.svg" alt="logo">
-        </nav>
-    </footer>
+    <header>
+            <img class="logo" src="./assets/logo.svg" alt="logo">
+    </header>
     <main>
         <img class="img" src="./assets/illustration-mockups.svg" alt="ollustration">
         <sec class="sec1">
             <h1 class="sec1__title">Build The Community Your Fans Will Love</h1>
             <p  class="sec1__paragraph">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
-            <input class="sec1__button" type="button" value="Register">
+            <button class="sec1__button" type="submit">Register</button>
         </sec>
     </main>
     <footer>
-        <div>
+        <div class="icons">
             <a href="#" aria-label="facebook">   <i class="fa-brands fa-facebook-f"></i></a>
             <a href="#" aria-label="twitter">    <i class="fa-brands fa-twitter"></i>   </a>
             <a href="#" aria-label="instagram">  <i class="fa-brands fa-instagram"></i> </a>
