--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/resetPro.css" />
     <link rel="stylesheet" href="./css/style.css">
@@ -19,11 +18,11 @@
     </header>
     <main>
         <img class="img" src="./assets/illustration-mockups.svg" alt="ollustration">
-        <sec class="sec1">
+        <section class="sec1">
             <h1 class="sec1__title">Build The Community Your Fans Will Love</h1>
             <p  class="sec1__paragraph">Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion. </p>
             <button class="sec1__button" type="submit">Register</button>
-        </sec>
+        </section>
     </main>
     <footer>
         <div class="icons">
